criação da página contatos e quem somos nós, e também da página formulário

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
             <ul>
                 <a href="index.html"><li>Início</li></a>                
-                <a href="#"><li>Contatos</li></a>
-                <a href="#"><li>Quem somos nós</li></a>
+                <a href="contato.html"><li>Contatos</li></a>
+                <a href="quem_somos.html"><li>Quem somos nós?</li></a>
                 <a href="portal_de_vagas.html"  id="portal-btn"><li>Portal de Vagas</li></a>
             </ul>
         </header>
@@ -32,9 +32,23 @@
             </aside>
 
             <article>
-                <img src="./images/Humaaans - 2 Characters.png" alt="duas pessoas">
+                <img src="./images/ideia.png" alt="duas pessoas">
             </article>
         </main>
 
+        <div class="rodape">
+            <h3><a href="https://forms.gle/tSYEJvzGDpvxGqh9A" id="feedback">Acesse o formulário de feedback clicando aqui</a></h3>
+        </div>
+
+        <div class="siganos">
+            <h3>Siga nas nossas redes sociais:</h3>
+        </div>
+
+        <div class="redes">
+            <a href="index.html"><img  src="./images/instagram.png" id="insta"></a>
+            <a href="index.html"><img src="./images/twitter.png" id="twitter"></a>
+        </div>
+        
+        
     </body>
 </html>
