--- a/portal_de_vagas.html
+++ b/portal_de_vagas.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/styles/fonts.css" rel="stylesheet">
-        <link href="/styles/media.css" rel="stylesheet">
+        <link href="/styles/media-vagas.css" rel="stylesheet">
         <link href="/styles/portaldevagas.css" rel="stylesheet">
         <title>Vagas Ateneu</title>
     </head>
@@ -18,8 +18,8 @@
 
             <ul>
                 <a href="index.html"><li>Início</li></a>                
-                <a href="#"><li>Contatos</li></a>
-                <a href="#"><li>Quem somos nós</li></a>             
+                <a href="contato.html"><li>Contatos</li></a>
+                <a href="quem_somos.html"><li>Quem somos nós?</li></a>             
             </ul>
         </header>
 
@@ -28,16 +28,17 @@
                 <h2><span>Vagas disponíveis</span></h2>                
             </aside>
 
+           
             <article>
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
-                <img src="/images/vaga-exemplo.png" id="vaga-exemplo">
+                <a href="/images/VAGA-4.jpeg"><img src="/images/VAGA-4.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-5.jpeg"><img src="/images/VAGA-5.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-6.jpeg"><img src="/images/VAGA-6.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-1.jpeg"><img src="/images/VAGA-1.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-2.jpeg"><img src="/images/VAGA-2.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-3.jpeg"><img src="/images/VAGA-3.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-7.jpeg"><img src="/images/VAGA-7.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-8.jpeg"><img src="/images/VAGA-8.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-9.jpeg"><img src="/images/VAGA-9.jpeg" id="vaga-exemplo"></a>
             </article>
 
         </main>
