atualizando portal de vagas

--- a/portal_de_vagas.html
+++ b/portal_de_vagas.html
@@ -30,15 +30,17 @@
 
            
             <article>
-                <a href="/images/VAGA-4.jpeg"><img src="/images/VAGA-4.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-5.jpeg"><img src="/images/VAGA-5.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-6.jpeg"><img src="/images/VAGA-6.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-1.jpeg"><img src="/images/VAGA-1.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-2.jpeg"><img src="/images/VAGA-2.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-3.jpeg"><img src="/images/VAGA-3.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-7.jpeg"><img src="/images/VAGA-7.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-8.jpeg"><img src="/images/VAGA-8.jpeg" id="vaga-exemplo"></a>
-                <a href="/images/VAGA-9.jpeg"><img src="/images/VAGA-9.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-4.jpeg"><img src="./images/VAGA-4.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-5.jpeg"><img src="./images/VAGA-5.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-6.jpeg"><img src="./images/VAGA-6.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-1.jpeg"><img src="./images/VAGA-1.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-2.jpeg"><img src="./images/VAGA-2.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-3.jpeg"><img src="./images/VAGA-3.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-7.jpeg"><img src="./images/VAGA-7.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-8.jpeg"><img src="./images/VAGA-8.jpeg" id="vaga-exemplo"></a>
+                <a href="/images/VAGA-9.jpeg"><img src="./images/VAGA-9.jpeg" id="vaga-exemplo"></a>
             </article>
 
         </main>
+    </body>
+</html>
