adicionado mais vagas

--- a/portal_de_vagas.html
+++ b/portal_de_vagas.html
@@ -30,6 +30,21 @@
 
            
             <article>
+                <a href="./images/VAGA-25.jpeg"><img src="./images/VAGA-25.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-24.jpeg"><img src="./images/VAGA-24.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-23.jpeg"><img src="./images/VAGA-23.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-22.jpeg"><img src="./images/VAGA-22.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-21.jpeg"><img src="./images/VAGA-21.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-20.jpeg"><img src="./images/VAGA-20.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-19.jpeg"><img src="./images/VAGA-19.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-18.jpeg"><img src="./images/VAGA-18.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-17.jpeg"><img src="./images/VAGA-17.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-14.jpeg"><img src="./images/VAGA-14.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-13.jpeg"><img src="./images/VAGA-13.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-12.jpeg"><img src="./images/VAGA-12.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-15.jpeg"><img src="./images/VAGA-15.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-11.jpeg"><img src="./images/VAGA-11.jpeg" id="vaga-exemplo"></a>
+                <a href="./images/VAGA-10.jpeg"><img src="./images/VAGA-10.jpeg" id="vaga-exemplo"></a>
                 <a href="./images/VAGA-4.jpeg"><img src="./images/VAGA-4.jpeg" id="vaga-exemplo"></a>
                 <a href="./images/VAGA-5.jpeg"><img src="./images/VAGA-5.jpeg" id="vaga-exemplo"></a>
                 <a href="./images/VAGA-6.jpeg"><img src="./images/VAGA-6.jpeg" id="vaga-exemplo"></a>
